Fix letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,12 @@ body {
   color: var(--slate-900);
   line-height: 118.2%;
   margin-bottom: 1rem;
+  letter-spacing: 0;
 }
 
 .card__description {
   font-weight: 400;
   color: var(--slate-500);
   line-height: 140%;
+  letter-spacing: .01333333em;
 }
